Inicio da introdução.

--- a/doc/pubs/COCOON2014/paper/texs/introduction.tex
+++ b/doc/pubs/COCOON2014/paper/texs/introduction.tex
@@ -1,8 +1,11 @@
-%Electricity loss due to fraud is a major concern among Electricity Distribution Companies (EDCO's) in developing countries. 
-%The current estimate in our local Brazilian distributer is that about 13\% of the overall distributed electricity is lost due to fraud (non-technical losses)
-%whereas only 7\% is lost due to inherent physical phenomena involved in the transmission of electricity (technical losses) \cite{ANEEL2012}. 
-%The excessive non-technical loss represents a profit reduction for the
-%EDCOS's and ultimately an impact on the quality of the distribution service, which in turn, motivate even more non-technical losses.
+Electricity loss due to fraud in developing countries is a major issue among
+their electricity distribution companies (EDCOs).
+According to technical reports from a brazilian EDCO, about 13\% of overall
+distributed electricity is lost due to fraud, wheras only \%7 is lost due to
+inherent physical phenomena from electricity transmission~\cite{ANEEL2012} .
+For the EDCOs this excessive non-technical loss represents a profit reduction
+and ultimately an impact on the quality of the distribution service, which
+motivates even more non-technical losses by consumers.
 
 %In principle, EDCO's could increase the charge of consumers to payoff the loss of electricity due to non-technical sources.
 %However, the Brazilian regulatory agency of electricity (ANEEL) dictates that only a given amount of non-technical loss
