--- a/doc/pubs/COCOON2014/paper/paper.tex
+++ b/doc/pubs/COCOON2014/paper/paper.tex
@@ -1,73 +1,100 @@
 \documentclass{llncs}
 \usepackage{llncsdoc}
-
-\usepackage[citestyle=authoryear]{biblatex}
-
-\addbibresource{ref.bib}
+%splncs03.bst
 
 \usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{amsmath}
+\usepackage{amssymb,amsmath}
+\usepackage{hyperref}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
-\usepackage{todonotes}
-\usepackage{hyperref}
+\usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage[skip=2pt,font=footnotesize]{caption}
 
-\title{\it Papers title}
 
-\author{
+\usepackage{biblatex}
+%\usepackage[citestyle=authoryear]{biblatex}
+\addbibresource{ref.bib}
+
+% correct bad hyphenation here
+\hyphenation{op-tical net-works semi-conduc-tor}
+
+% path for images
+\graphicspath{ {imgs/} }
+
+\makeatletter
+\makeatother
+
+\begin{document}
+%
+% paper title
+% can use linebreaks \\ within to get better formatting as desired
+\title{A Recommender Framework for Portfolio Selection to Reduce
+Fraud in Electricity Distribution Using Integer Programming and Heuristic Techniques}
+
+
+\author{\Diego Luchi \IEEEauthorrefmark{1}, 
+F\'abio Fabris \IEEEauthorrefmark{2}, 
 Marcos Daniel Valad\~ao Baroni,
-Jo\~ao Carlos,
-Fl\'avio Miguel Varej\~ao,
-Diego Luchi,\\
+Alexandre Rodrigues,
+Fl\'avio Miguel Varej\~ao
 }
 
 \institute{
 N\'ucleo de Infer\^encia em Algoritmos (NINFA) - Departamento de Inform\'atica\\
 Universidade Federal do Esp\'irito Santo\\
-Vit\'oria, Esp\'irito Santo, Brasil
+Vit\'oria, Esp\'irito Santo, Brasil\\
 }
 
-
-\begin{document}
-
+% make the title area
 \maketitle
 
 \begin{abstract}
-Electricity fraud corresponds to a major source of loss of Electricity Distribution Companies (EDCO's) in developing countries.
-To attenuate this, EDCO's have at their disposal several loss reduction actions.
-These actions must be performed to reach a given energy loss reduction goal, established
-by the regulatory agency.
-If this goal is not reached, the profit margin of the company is reduced.
+Electricity fraud corresponds to a major source of loss in Electricity
+Distribution Companies in developing countries. To attenuate this,
+companies have at their disposal several loss reduction actions. These actions
+must be performed to reach a given electricity loss reduction goal, established
+by the regulatory agency. If this goal is not reached, the profit margin
+of the company is reduced.
 This work defines a formal model for the action allocation task 
 and proposes an exact mathematic programming method for solving small instances of
-the problem.
-%We compare the techniques considering running time and solution quality.
+the problem and two heuristic methods for larger ones. We compare
+the techniques considering solution quality.
+
 \end{abstract}
 
+%\begin{keywords}
+%Optimization; Metaheuristics; Knapsack;
+%\end{keywords}
+
 \section{Introduction}
-\label{sec:introduction}
-\input{texs/introduction.tex}
+\label{sec:intro}
+\input{texs/intro.tex}
 
 \section{Problem Definition}
-\label{sec:definition}
-\input{texs/definition.tex}
+\label{sec:defi}
+\input{texs/defi.tex}
 
-\section{Related Work}
-\label{sec:related}
-\input{texs/related}
+\section{Related Work} 
+\label{sec:relat}
+\input{texs/related.tex}
 
-\section{Problem Solving Methods}
-\label{sec:solving}
-\input{texs/solving.tex}
+\section{Solving the Problem}
+\label{sec:alter}
+\input{texs/alter.tex}
 
 \section{Experiments}
-\label{sec:experiments}
-\input{texs/experiments}
+\label{sec:exp}
+\input{texs/exp.tex}
 
-\section{Conclusion and Future Works}
-\label{sec:conclusion}
-\input{texs/conclusion}
+\section{Conclusion and Future Work}
+\label{sec:con}
+\input{texs/conclu.tex}
 
+\printbibliography
+
+% that's all folks
 \end{document}
+
 
