Coloando graficos lado a lado.

--- a/doc/pubs/COCOON2014/paper/paper.tex
+++ b/doc/pubs/COCOON2014/paper/paper.tex
@@ -10,11 +10,10 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
-\usepackage[skip=2pt,font=footnotesize]{caption}
 
 
 \usepackage{biblatex}
-%\usepackage[citestyle=authoryear]{biblatex}
+
 \addbibresource{ref.bib}
 
 % correct bad hyphenation here
@@ -34,8 +33,8 @@
 Fraud in Electricity Distribution Using Integer Programming and Heuristic Techniques}
 
 
-\author{\Diego Luchi \IEEEauthorrefmark{1}, 
-F\'abio Fabris \IEEEauthorrefmark{2}, 
+\author{Diego Luchi, 
+F\'abio Fabris, 
 Marcos Daniel Valad\~ao Baroni,
 Alexandre Rodrigues,
 Fl\'avio Miguel Varej\~ao
