--- a/doc/pubs/COCOON2014/paper/texs/exp.tex
+++ b/doc/pubs/COCOON2014/paper/texs/exp.tex
@@ -141,23 +141,24 @@ the harder the problems seems to be, as predicted by the literature.
 %\end{subfigure}
 
 \begin{figure}
-  \begin{subfigure}
-    \includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/very_hard.pdf}
+  \begin{subfigure}{0.45\textwidth}
+    \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/very_hard.pdf}
     \caption{Strong correlation between cost and profit.}
     \label{fig:time1}
   \end{subfigure}
-  \begin{subfigure}
-    \includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/hard.pdf}
+  \qquad
+  \begin{subfigure}{0.45\textwidth}
+    \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/hard.pdf}
     \caption{Weak correlation between cost and profit. \\ $\,$ }
     \label{fig:time2}
   \end{subfigure}
 \end{figure}
 
-\begin{subfigure}
-  \includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/easy.pdf}
-  \caption{No correlation between cost and profit.}
-  \label{fig:time3}
-\end{subfigure}
+%\begin{subfigure}
+%  \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/easy.pdf}
+%  \caption{No correlation between cost and profit.}
+%  \label{fig:time3}
+%\end{subfigure}
 
 
 \subsection{Solution Analysis - Easy Instances}
@@ -185,7 +186,7 @@ that the algorithms are the same with a $p$-value of less than $10^{-11}$.
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard.pdf}
+\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard.pdf}
 \caption{Comparison between the optimal solution (when available) 
 and the solution by the GALP for $\alpha=0.0$.}
 \label{fig:mh1_1}
@@ -193,7 +194,7 @@ and the solution by the GALP for $\alpha=0.0$.}
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard_ts.pdf}
+\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard_ts.pdf}
 \caption{Comparison between the optimal solution (when available) 
 and the solution by the TSLP for $\alpha=0.0$.}
 \label{fig:mh2_1}
@@ -201,7 +202,7 @@ and the solution by the TSLP for $\alpha=0.0$.}
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_hard.pdf}
+\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_hard.pdf}
 \caption{Comparison between the optimal solution (when available) 
 and the solution by the GALP for $\alpha=0.1$.}
 \label{fig:mh1_2}
@@ -209,7 +210,7 @@ and the solution by the GALP for $\alpha=0.1$.}
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_hard_ts.pdf}
+\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_hard_ts.pdf}
 \caption{Comparison between the optimal solution (when available) 
 and the solution by the TSLP for $\alpha=0.1$.}
 \label{fig:mh2_2}
@@ -218,7 +219,7 @@ and the solution by the TSLP for $\alpha=0.1$.}
 \begin{figure}
 \centering
 %\vspace{1mm}
-\includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy.pdf}
+\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy.pdf}
 \caption{Comparison between the optimal solution (when available) 
 and the solution by the GALP for $\alpha=1.0$.}
 \label{fig:mh1_3}
@@ -226,7 +227,7 @@ and the solution by the GALP for $\alpha=1.0$.}
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy_ts.pdf}
+\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy_ts.pdf}
 \caption{Comparison between the optimal solution (when available) 
 and the solution by the TSLP for $\alpha=1.0$.}
 \label{fig:mh2_3}
@@ -253,7 +254,7 @@ are equal with a $p$-value of less than $10^{-11}$.
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard_sg_ts.pdf}
+\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard_sg_ts.pdf}
 \caption{Relative distance between the two proposed heuristics for $\alpha=0.0$.}
 \label{fig:comp_1}
 \end{figure}
@@ -261,14 +262,14 @@ are equal with a $p$-value of less than $10^{-11}$.
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_hard_sg_ts.pdf}
+\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_hard_sg_ts.pdf}
 \caption{Relative distance between the two proposed heuristics for $\alpha=0.1$.}
 \label{fig:comp_2}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.73, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy_sg_ts.pdf}
+\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy_sg_ts.pdf}
 \caption{Relative distance between the two proposed heuristics for $\alpha=1.0$.}
 \label{fig:comp_3}
 \end{figure}
