Acertos no texto COCOON: restricao e EDCOs.

--- a/doc/pubs/COCOON2014/paper/texs/defi.tex
+++ b/doc/pubs/COCOON2014/paper/texs/defi.tex
@@ -61,7 +61,7 @@ $R_{i,j,k}$ being the fraud reduction in the $k$-th year by the action $j$ taken
 and the dependency restriction for all actions and for all years,
 \begin{equation}
     \label{eq:dependency}
-    \forall j,k \quad \sum_{i=1}^{k} x_{d, i} \ge x_{j, d} \cdot Q_{j, d} \, \forall d \in D_j.
+    \forall j,k \quad \sum_{i=1}^{k} x_{d, i} \ge \sum_{i'=1}^{k} x_{j, i'} \cdot Q_{j, d} \, \forall d \in D_j.
 \end{equation}
 
 To introduce the objective function we must define some auxiliary concepts:
