--- a/doc/pubs/COCOON2014/paper/texs/exp.tex
+++ b/doc/pubs/COCOON2014/paper/texs/exp.tex
@@ -122,7 +122,7 @@ We have observed that the variance of the running times to solve these 10 instan
 for the mean to be significative, so we have adopted a alternative strategy to compare problem sizes
 and $\alpha$:
 we assume that running times of more than one hour are prohibitive for our application, since
-EDCO's usually test several portfolios to make their investment decision. So we consider that
+EDCOs usually test several portfolios to make their investment decision. So we consider that
 these instances failed to find the solution in practical times.
 
 Figures~\ref{fig:time1} to~\ref{fig:time3} display the amount of instances that successfully executed in less than one hour,
