--- a/doc/pubs/COCOON2014/paper/texs/exp.tex
+++ b/doc/pubs/COCOON2014/paper/texs/exp.tex
@@ -1,99 +1,25 @@
 
 \subsection{Experimental Setup}
-\subsubsection{Computational Environment}
+%\subsubsection{Computational Environment}
 All experiments were run in Intel Core i5-2310 CPU @ 2.90GHz machines
 with 8GB of RAM memory running Linux Mint 13 64 bits.  To facilitate the job distribution we have used the HTCondor framework.
 
-\subsubsection{Parameters}
+%\subsubsection{Parameters}
 The GALP algorithm has no settable parameters, the TSLP algorithm on the other hand,
 has 3 parameters: the number of iterations of the Tabu Search algorithm (10000),
 the size of the tabu list (1000) and the number of random neighbors per iteration
 ($n_{tabu}$ = 500).
 The parameters were set up by empirically experimenting several different combinations.
 
-\subsubsection{Implementation}
+%\subsubsection{Implementation}
 To solve the integer programming problems we have used the GLPK LP/MIP solver \cite{GLPK},
 version 4.43. We have implemented the heuristics using the Java programming language and
 executed/compiled the codes using the Java(TM) SE Runtime Environment (build 1.7.0\_10-b18).
 All implementations are available at \url{http://ninfa.inf.ufes.br/ICTAI2013/impl.zip}. 
 
-\subsection{Instance Generator}
-To create the instances for our analysis we have implemented a random instance generator.
-We have tried to mimic the characteristics of real-world actions supplied by the local EDCO.
-Algorithm~\ref{alg:gen} defines the pseudocode of the random instance generator.
-
-\begin{figure}
-\begin{algorithm}[H]
-\begin{algorithmic}[1]
-\Function{Generator}{Correlation factor $\alpha$, Number of years $M$, Number of actions $N$}
-\State \label{line:gen1} $BudgetMean \gets Random_{\textit{Uniform}}(700,800)$
-\State $BudgetVariance \gets Random_{\textit{Uniform}}(10,20)$
-\For{$i=1 \to M$}
-  \State $o_{i1} \gets Random_{\textit{Gauss}}(BudgetMean,$ $BudgetVariance)$
-\EndFor \label{line:gen2}
-\For{$j=1 \to N$}\label{line:gen3}
-  \State $c_{j1} \gets \label{line:min} Min(Min(o), Random_{\textit{Uniform}}(1,100))$
-\EndFor
-\For{$j=1 \to N$}
-  \State \label{line:market} $ m_j = 2 Sum(o) / (M \cdot c_{j1})$
-\EndFor \label{line:gen4}
-
-\For{$j=1 \to N$} \label{line:W1}
-  \For{$i=1 \to M$}
-    \State $W_{ji} \gets Random_{\textit{Uniform}}(0,1)$
-  \EndFor
-  \State $W_{j} \gets ReverSort(W_{j})$
-\EndFor
-
-\For{$j=1 \to N$}
-  \State $s \gets 0$
-  \For{$i=1 \to M$}
-    \State $s \gets s + W_{ji}$
-  \EndFor
-  \For{$i=1 \to M$}
-    \State $W_{ji} \gets W_{ji}/s$
-  \EndFor
-\EndFor  \label{line:W2}
-
-\For{$i=1 \to M$} \label{line:e1}
-  \For{$j=1 \to N$}
-      \State \label{line:en} $e_{j,k} \gets Max(0, Abs((1-\alpha) \cdot c_{j1} \cdot W_{ji} \, +$
-      \State $\qquad \quad \, Random_{\textit{Uniform}}(-100,100) \cdot \alpha))$
-  \EndFor
-\EndFor \label{line:e2}
-\EndFunction
-\end{algorithmic}
-\caption{Random instance generator}
-\label{alg:gen}
-\end{algorithm}
-\end{figure}
-
-Lines \ref{line:gen1} to \ref{line:gen2} present the generation of the yearly budgets from a Gaussian
-distribution (function $GaussRandom(mean, variance)$) that in turn has its variance and mean draw 
-from a uniform distribution of fixed parameters (function $URandom(Lower\,bound,\,Upper\,bound)$).
-The parameters were inspired by real-world actions, given by the local EDCO.
-
-Lines \ref{line:gen3} to \ref{line:gen4} generate the cost and market of each action, the cost comes from
-an uniform random distribution with fixed parameters. Note that in line \ref{line:min} we
-use the $Min$ function to guarantee that the action may performed at least one time. Line \ref{line:market}
-defines the market of each action as a function of the total budget over all years ($Sum(o)$) and the
-cost of the action. That is, the cheapest the action the larger the market.
-
-Lines \ref{line:W1} to \ref{line:W2} are used to build the reverse-ordered normalized weight matrix that is used to 
-build the recuperation over the years. After line \ref{line:W2}, the $j$-th line of matrix $W$ will contain
-a vector of values that add up to 1 and are reversely ordered, e.g., a possible $W$ matrix for 3 years and 4 actions
-could be:
-\[ W = \left( \begin{array}{ccc}
-0.7 & 0.2 & 0.1 \\
-0.8 & 0.1 & 0.1 \\
-0.6 & 0.2 & 0.2 \\
-1.0 & 0.0 & 0.0 \end{array} \right).\] 
-
-Finally from lines \ref{line:e1} to \ref{line:e2} the electricity recuperation values are defined for each action
-and each year. In line \ref{line:en} we may see that the use of matrix $W$ guarantees that the electricity recuperation has a decreasing tendency
-over the years. In this line we also present the use of the correlation parameter $\alpha \in [0,1]$.
-The closest $\alpha$ is to one, the weaker is the correlation.
-
+%\subsection{Instance Generator}
+To create the instances for our analysis we have implemented a random instance generator,
+with parameters inspired by real-world actions given by the local EDCO.
 The generator was implemented in the Python programming language and its implementation 
 and random instances are available at \url{http://ninfa.inf.ufes.br/ICTAI2013/gen.zip}.
 
@@ -134,32 +60,42 @@ Also, it may be observed that the more
 correlated the cost is with the profit (the smaller the $\alpha$),
 the harder the problems seems to be, as predicted by the literature.
 
-%\begin{subfigure}[b]{0.3\textwidth}
-%  \includegraphics[width=\textwidth]{mouse}
-%  \caption{A mouse}
-%  \label{fig:mouse}
-%\end{subfigure}
+%\begin{figure}
+%  \begin{subfigure}{0.45\textwidth}
+%    \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/very_hard.pdf}
+%    \caption{Strong correlation between cost and profit.}
+%    \label{fig:time1}
+%  \end{subfigure}
+%  \begin{subfigure}{0.45\textwidth}
+%    \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/hard.pdf}
+%    \caption{Weak correlation between cost and profit. \\ $\,$ }
+%    \label{fig:time2}
+%  \end{subfigure}
+%  \begin{subfigure}{0.45\textwidth}
+%    \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/easy.pdf}
+%    \caption{No correlation between cost and profit.}
+%    \label{fig:time3}
+%  \end{subfigure}
+%\end{figure}
 
-\begin{figure}
+\begin{figure}[H]
   \begin{subfigure}{0.45\textwidth}
     \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/very_hard.pdf}
     \caption{Strong correlation between cost and profit.}
     \label{fig:time1}
   \end{subfigure}
-  \qquad
   \begin{subfigure}{0.45\textwidth}
     \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/hard.pdf}
     \caption{Weak correlation between cost and profit. \\ $\,$ }
     \label{fig:time2}
   \end{subfigure}
+  \begin{subfigure}{0.45\textwidth}
+    \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/easy.pdf}
+    \caption{No correlation between cost and profit.}
+    \label{fig:time3}
+  \end{subfigure}
+  \caption{Number of aborted instances for exact approach.}
 \end{figure}
-
-%\begin{subfigure}
-%  \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/easy.pdf}
-%  \caption{No correlation between cost and profit.}
-%  \label{fig:time3}
-%\end{subfigure}
-
 
 \subsection{Solution Analysis - Easy Instances}
 
@@ -185,54 +121,58 @@ In fact, considering only these easier problem sizes, the paired Wilcoxon signed
 that the algorithms are the same with a $p$-value of less than $10^{-11}$.
 
 \begin{figure}
-\centering
-\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard.pdf}
-\caption{Comparison between the optimal solution (when available) 
-and the solution by the GALP for $\alpha=0.0$.}
-\label{fig:mh1_1}
+  \begin{subfigure}{0.45\textwidth}
+    %\centering
+    \includegraphics[scale=0.5, trim=0.75cm 0.55cm 0 2cm, clip=true]{imgs/comp_very_hard.pdf}
+    \caption{Solution by GALP for $\alpha=0.0$.}
+    \label{fig:mh1_1}
+  \end{subfigure}
+  \begin{subfigure}{0.45\textwidth}
+    %\centering
+    \includegraphics[scale=0.5, trim=0.75cm 0.55cm 0 2cm, clip=true]{imgs/comp_very_hard_ts.pdf}
+    \caption{Solution by TSLP for $\alpha=0.0$.}
+    \label{fig:mh2_1}
+  \end{subfigure} 
+  \begin{subfigure}{0.45\textwidth}
+    \includegraphics[scale=0.5, trim=0.75cm 0.55cm 0 2cm, clip=true]{imgs/comp_hard.pdf}
+    \caption{Solution by GALP for $\alpha=0.1$.}
+    \label{fig:mh1_2}
+  \end{subfigure}
+  \begin{subfigure}{0.45\textwidth}
+    \includegraphics[scale=0.5, trim=0.75cm 0.55cm 0 2cm, clip=true]{imgs/comp_hard_ts.pdf}
+    \caption{Solution by TSLP for $\alpha=0.1$.}
+    \label{fig:mh2_2}
+  \end{subfigure}
+  \begin{subfigure}{0.45\textwidth}
+    \includegraphics[scale=0.5, trim=0.75cm 0.55cm 0 2cm, clip=true]{imgs/comp_easy.pdf}
+    \caption{Solution by GALP for $\alpha=1.0$.}
+    \label{fig:mh1_3}
+  \end{subfigure}
+  \hspace{1cm}
+  \begin{subfigure}{0.45\textwidth}
+    \includegraphics[scale=0.5, trim=0.75cm 0.55cm 0 2cm, clip=true]{imgs/comp_easy_ts.pdf}
+    \caption{Solution by TSLP for $\alpha=1.0$.}
+    \label{fig:mh2_3}
+  \end{subfigure}
+  \caption{Comparison between the optimal solution (when available) 
+  and the solution by heuristic methods.}
 \end{figure}
 
 \begin{figure}
-\centering
-\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard_ts.pdf}
-\caption{Comparison between the optimal solution (when available) 
-and the solution by the TSLP for $\alpha=0.0$.}
-\label{fig:mh2_1}
-\end{figure} 
-
-\begin{figure}
-\centering
-\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_hard.pdf}
-\caption{Comparison between the optimal solution (when available) 
-and the solution by the GALP for $\alpha=0.1$.}
-\label{fig:mh1_2}
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard_sg_ts.pdf}
+    \caption{$\alpha=0.0$.}
+    \label{fig:comp_1}
+  \end{subfigure}
+  \hspace{1cm}
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy_sg_ts.pdf}
+    \caption{$\alpha=1.0$.}
+    \label{fig:comp_3}
+  \end{subfigure}
 \end{figure}
-
-\begin{figure}
-\centering
-\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_hard_ts.pdf}
-\caption{Comparison between the optimal solution (when available) 
-and the solution by the TSLP for $\alpha=0.1$.}
-\label{fig:mh2_2}
-\end{figure}
- 
-\begin{figure}
-\centering
-%\vspace{1mm}
-\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy.pdf}
-\caption{Comparison between the optimal solution (when available) 
-and the solution by the GALP for $\alpha=1.0$.}
-\label{fig:mh1_3}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy_ts.pdf}
-\caption{Comparison between the optimal solution (when available) 
-and the solution by the TSLP for $\alpha=1.0$.}
-\label{fig:mh2_3}
-\end{figure}
-
 
 \subsection{Solution Analysis - All Instances}
 
@@ -252,28 +192,6 @@ so we perform the paired Wilcoxon signed-rank to confirm that the TSLP is indeed
 to the GALP algorithm. And again we may reject that null hypothesis that the algorithm
 are equal with a $p$-value of less than $10^{-11}$.
 
-\begin{figure}
-\centering
-\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_very_hard_sg_ts.pdf}
-\caption{Relative distance between the two proposed heuristics for $\alpha=0.0$.}
-\label{fig:comp_1}
-\end{figure}
-
-
-\begin{figure}
-\centering
-\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_hard_sg_ts.pdf}
-\caption{Relative distance between the two proposed heuristics for $\alpha=0.1$.}
-\label{fig:comp_2}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics[scale=0.5, trim=0.75cm 0cm 0 2cm, clip=true]{imgs/comp_easy_sg_ts.pdf}
-\caption{Relative distance between the two proposed heuristics for $\alpha=1.0$.}
-\label{fig:comp_3}
-\end{figure}
-
 Figures~\ref{fig:lpgavsmip} and \ref{fig:lptsvsmip} display the histogram of
 the ratio of the solution found by the heuristic algorithms and the optimal solution.
 From the histograms we can conclude that TSLP has a better behavior than GALP,
@@ -282,17 +200,20 @@ showing a smaller variance and larger ratio mean.
 Although the time limit was set to one hour, the TSLP had a maximum running time of less than one minute, with an average time of 20 seconds, and GALP had a negligible running time for all instances.
 
 \begin{figure}
-\centering
-\includegraphics[scale=0.7, trim=1cm 0 0 0]{imgs/lpgavsmip.pdf}
-\caption{Histogram of the ratio of the solution found by the GALP heuristic and the optimal solution.}
-\label{fig:lpgavsmip}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics[scale=0.7, trim=1cm 0 0 0]{imgs/lptsvsmip.pdf}
-\caption{Histogram of the ratio of the solution found by the TSLP heuristic and the optimal solution.}
-\label{fig:lptsvsmip}
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[scale=0.5, trim=1cm 0 0 0]{imgs/lpgavsmip.pdf}
+    \caption{Ratio of the solution found by the GALP.}
+    \label{fig:lpgavsmip}
+  \end{subfigure}
+  \qquad
+  \begin{subfigure}{0.45\textwidth}
+    \centering
+    \includegraphics[scale=0.5, trim=1cm 0 0 0]{imgs/lptsvsmip.pdf}
+    \caption{Ratio of the solution found by the TSLP.}
+    \label{fig:lptsvsmip}
+  \end{subfigure}
+  \caption{Histograms of the ratio of the solutions found by the heuristics methods and the optimal solution.}
 \end{figure}
 
 % From the figures it is clear that the TSLP algorithm is superior
