Artigo sobre BnC adicionado.

--- a/doc/defs/knap1.tex
+++ b/doc/defs/knap1.tex
@@ -50,7 +50,7 @@ Versão original do problema, inspirado no problema da Escelsa de combate a perd
 \topico{Restrições}
 \begin{restricoes}
     \restricao
-	  {Meta de recuperação anual\footnote{Dúvida: a recuperação ficar muito abaixo da meta não é um problema?}}
+	  {Meta de recuperação anual}
 	  { \sum_{i = 1}^N \sum_{k \in P_j}}
 	  { Rec_i^k(\overline{x})}
 	  { \leq }
