--- a/doc/relatorios/backbone-artigo/backbone.tex
+++ b/doc/relatorios/backbone-artigo/backbone.tex
@@ -1,11 +1,31 @@
 \documentclass{article}
 
+\author{Marcos Daniel Baroni}
+
 \begin{document}
 
+% Algorithms to introduce
+% - EXACT: Branch-and-cut (CPLEX)
+% - DPROG: Bertsimas 2002
+% - PROBL: Dyer 1989
+% - HEURI: (???)
+%
+% Instances:
+% - OR-Library
+% - Uniform[0-1]
+% - Transformation from other NP-Complete problems (???)
+%
+% Research questions (what i hope to find out):
+% - Which instances are hard/easy for each algorithm?
+%   - Why are they hard?
+% - Which instances are hard for all algorithms?
+%   - Why are they hard for all?
+% - Instances from other NP-Complete problems are hard?
 
-% algorithms to introduce
-% research questions
-% what you hope to find out
+\section{Introduction}
+\section{Algorithms}
+\section{Instances}
+\section{Research Questions and Expectations}
 
 \end{document}
 
