Lendo mkp2zpl de arquivo tbm.

--- a/doc/relatorios/backbone-artigo/backbone.tex
+++ b/doc/relatorios/backbone-artigo/backbone.tex
@@ -8,7 +8,7 @@
 % - EXACT: Branch-and-cut (CPLEX)
 % - DPROG: Bertsimas 2002
 % - PROBL: Dyer 1989
-% - HEURI: (???)
+% - HEURI: (Fleszar 2009?)
 %
 % Instances:
 % - OR-Library
@@ -21,10 +21,21 @@
 % - Which instances are hard for all algorithms?
 %   - Why are they hard for all?
 % - Instances from other NP-Complete problems are hard?
+%   - What happens with their transition phases.
 
 \section{Introduction}
+
+% Definição do problema
+The multidimensional knapsack problem (MKP) 
+
+% prova da NP-Complitude
+
+% Literatura existente
+
 \section{Algorithms}
+
 \section{Instances}
+
 \section{Research Questions and Expectations}
 
 \end{document}
