Inicio de tabu search.

--- a/doc/relatorios/backbone-artigo/backbone.tex
+++ b/doc/relatorios/backbone-artigo/backbone.tex
@@ -25,12 +25,13 @@
 
 \section{Introduction}
 
-% Definição do problema
+% Definição do problema e aplicações
 The multidimensional knapsack problem (MKP) 
 
-% prova da NP-Complitude
+% prova da NP-complitude
 
-% Literatura existente
+% Literatura existente (used for metaheuristics testing, methods, 
+%    benchmark data base)
 
 \section{Algorithms}
 
