--- a/doc/relatorios/backbone-artigo/backbone.tex
+++ b/doc/relatorios/backbone-artigo/backbone.tex
@@ -58,7 +58,7 @@ with metaheuristics in recent years.
 Although none of those have exhibit competitive performance compared to
 comercial MIP solvers, at least over the instances existent on literature.
 
-% prova da NP-complitude. Prova da não existência de um FPTAS.
+According to literature MKP does not allow a FPTAS (unless $P=NP$).
 
 % Literatura existente (used for metaheuristics testing, methods, 
 %    benchmark data base)
